--- a/src/components/socialShare/Facebook.astro
+++ b/src/components/socialShare/Facebook.astro
@@ -3,7 +3,7 @@ import type ButtonProps from "./types";
 
 type Props = ButtonProps;
 
-const { url = Astro.request.url } = Astro.props;
+const { url = Astro.url } = Astro.props;
 
 let URL = `https://www.facebook.com/sharer/sharer.php?u=${url}`;
 ---
