--- a/src/components/socialShare/SocialShare.astro
+++ b/src/components/socialShare/SocialShare.astro
@@ -22,7 +22,7 @@ const DEFAULT_COMPONENTS = [
 
 const {
   buttons = DEFAULT_COMPONENTS,
-  url = Astro.request.url,
+  url = Astro.url,
   title,
   description,
   via,
