--- a/src/components/socialShare/Twitter.astro
+++ b/src/components/socialShare/Twitter.astro
@@ -3,7 +3,7 @@ import type ButtonProps from "./types";
 
 type Props = ButtonProps;
 
-const { url = Astro.request.url, description, via } = Astro.props;
+const { url = Astro.url, description, via } = Astro.props;
 
 let URL = `https://twitter.com/intent/tweet?url=${url}`;
 
