--- a/src/components/socialShare/Email.astro
+++ b/src/components/socialShare/Email.astro
@@ -3,7 +3,7 @@ import type ButtonProps from "./types";
 
 type Props = ButtonProps;
 
-const { url = Astro.request.url, title, description } = Astro.props;
+const { url = Astro.url, title, description } = Astro.props;
 
 let URL = `mailto:?subject=${title}&body=${description}%0A${url}`;
 ---
