--- a/src/components/socialShare/LinkedIn.astro
+++ b/src/components/socialShare/LinkedIn.astro
@@ -3,7 +3,7 @@ import type ButtonProps from "./types";
 
 type Props = ButtonProps;
 
-const { url = Astro.request.url } = Astro.props;
+const { url = Astro.url } = Astro.props;
 
 let URL = `https://www.linkedin.com/sharing/share-offsite/?url=${url}`;
 ---
