projet : sauve ta st valentin

--- a/src/pages/projets/[...slug].astro
+++ b/src/pages/projets/[...slug].astro
@@ -87,7 +87,7 @@ const json = {
       " prose-h2:text-l/primary dark:prose-h2:text-d/primary", //H2
 
       " prose-p:text-l/primary dark:prose-p:text-d/primary", //P
-
+      "prose-strong:font-bold prose-strong:text-current",
       "dark:prose-a:text-d/secondary" + " dark:hover:prose-a:bg-d/tertiary",
       "prose-a:text-l/tertiary prose-a:outline-none hover:prose-a:bg-l/tertiary" +
         " hover:prose-a:text-l/bg focus:prose-a:text-l/primary" +
