fix: frontmatter & headings style

--- a/src/pages/projets/[...slug].astro
+++ b/src/pages/projets/[...slug].astro
@@ -84,7 +84,7 @@ const json = {
         " prose-h1:py-2" +
         " prose-h1:bg-l/primary dark:prose-h1:bg-d/tertiary", //H1
 
-      " prose-h2:text-l/primary dark:prose-h2:text-d/primary", //H2
+      " prose-headings:text-l/primary dark:prose-headings:text-d/primary", //Headings
 
       " prose-p:text-l/primary dark:prose-p:text-d/primary", //P
       "prose-strong:font-bold prose-strong:text-current",
