--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -77,6 +77,7 @@ import BottomLine from "../components/BottomLine.astro";
       }
     </script>
     <ViewTransitions />
+<script defer src="https://cloud.umami.is/script.js" data-website-id="e3f35488-7747-451e-8e8c-b2681c905ae5"></script>
     <!-- Matomo Tag Manager -->
     <script is:inline>
       var _mtm = (window._mtm = window._mtm || []);
