update to umami self hosted

--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -77,8 +77,7 @@ import BottomLine from "../components/BottomLine.astro";
       }
     </script>
     <ViewTransitions />
-<script defer src="https://cloud.umami.is/script.js" data-website-id="e3f35488-7747-451e-8e8c-b2681c905ae5"></script>
-   
+<script defer src="https://analytics.marvinl.com/script.js" data-website-id="d75ac3a2-42e5-4aaf-8f37-371c1e2e4eac"></script>   
   </head>
   <body class="h-full w-full bg-l/bg p-4 antialiased dark:bg-d/bg md:p-0">
     <div
