--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,7 +51,13 @@ import BottomLine from "../components/BottomLine.astro";
     <meta property="twitter:title" content={title} />
     <meta property="twitter:site" content={Astro.url} />
     <meta property="twitter:description" content={desc} />
-
+    <!--RSS-->
+    <link
+        rel="alternate"
+        type="application/rss+xml"
+        title="MarvinL.com RSS Feed"
+        href={new URL("rss.xml", Astro.site)}
+    />
     <title>{title}</title>
     <ViewTransitions />
     <script type="application/ld+json">
@@ -81,7 +87,7 @@ import BottomLine from "../components/BottomLine.astro";
         ]
       }
     </script>
-<script defer src="https://analytics.marvinl.com/script.js" data-website-id="d75ac3a2-42e5-4aaf-8f37-371c1e2e4eac"></script>   
+<script defer src="https://analytics.marvinl.com/script.js" data-website-id="d75ac3a2-42e5-4aaf-8f37-371c1e2e4eac"></script>
   </head>
   <body class="h-full w-full bg-l/bg p-4 antialiased dark:bg-d/bg md:p-0">
     <div
