--- a/src/components/Story.astro
+++ b/src/components/Story.astro
@@ -13,8 +13,8 @@ import Link from "./Link.astro";
   </p>
   <p class="mt-2">
     MarvinL.com ne te dit surement pas grand chose, mais tu connais peut-être la
-    facette <Link url="https://macojaune.com" target="_blank">@macojaune</Link>
-    {" "} des réseaux sociaux.
+    facette <Link url="https://macojaune.com" target="_blank" class="mx-1">@macojaune</Link>
+     des réseaux sociaux.
   </p>
   <p>
     Disons que MarvinL.com c’est l'entité officielle de mon activité. <br />
