--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -47,6 +47,13 @@ import BottomLine from "../components/BottomLine.astro";
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content={title} />
     <meta property="twitter:description" content={desc} />
+    <!--RSS-->
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="MarvinL.com RSS Feed"
+      href={new URL("rss.xml", Astro.site)}
+    />
     <title>{title}</title>
 
     <script type="application/ld+json">
@@ -77,12 +84,15 @@ import BottomLine from "../components/BottomLine.astro";
       }
     </script>
     <ViewTransitions />
-<script defer src="https://analytics.marvinl.com/script.js" data-website-id="d75ac3a2-42e5-4aaf-8f37-371c1e2e4eac"></script>
+    <script
+      defer
+      src="https://analytics.marvinl.com/script.js"
+      data-website-id="d75ac3a2-42e5-4aaf-8f37-371c1e2e4eac"></script>
     <script async src="https://tally.so/widgets/embed.js"></script>
   </head>
-  <body class="h-full w-full bg-l/bg p-4 antialiased dark:bg-d/bg md:p-0">
+  <body class="h-full w-full bg-l/bg p-4 antialiased md:p-0 dark:bg-d/bg">
     <div
-      class="m-auto flex min-h-screen w-full max-w-xl flex-col items-start justify-center gap-8"
+      class="m-auto flex min-h-screen w-full max-w-3xl flex-col items-start justify-center gap-8"
     >
       <Navigation />
       <main class="mb-4 space-y-4">
