--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -13,14 +13,7 @@ const isActive = (n: { url: string }) => {
   {
     nav.map((n) =>
       !isActive(n) ? (
-        <Link
-          target="_self"
-          url={n.url}
-          noDecorate
-          title={n.title}
-          data-astro-prefecth
-          class="block"
-        >
+        <Link target="_self" url={n.url} noDecorate title={n.title} data-astro-prefecth>
           {n.title}
         </Link>
       ) : (
