--- a/src/pages/projets/index.astro
+++ b/src/pages/projets/index.astro
@@ -7,6 +7,7 @@ import Section from "../../components/Section.astro";
 import ContentLayout from "../../layouts/ContentLayout.astro";
 import { persona } from "../../persona";
 import ContentFooter from "../../components/ContentFooter.astro";
+import Header from '../../components/Header.astro'
 const clientProjects = await getCollection("project", ({ data }) => {
   if (data.isClient === true)
     return import.meta.env.PROD ? data.isDraft !== true : true;
@@ -18,6 +19,7 @@ const myProjects = await getCollection("project", ({ data }) => {
 ---
 
 <ContentLayout title="Mes projets − MarvinL.com" desc={persona.seo.projectDesc}>
+<Header title={persona.firstName} description={persona.description} />
   <Section>
     <SectionTitle title="Projets Clients" />
     <List>
