--- a/src/pages/projets/[...slug].astro
+++ b/src/pages/projets/[...slug].astro
@@ -32,7 +32,7 @@ const json = {
   image: "",
   author: {
     "@type": "",
-    name: "",
+    name: "MarvinL.com",
   },
   publisher: {
     "@type": "Organization",
