--- a/src/components/BottomLine.astro
+++ b/src/components/BottomLine.astro
@@ -10,7 +10,7 @@ import SocialShare from "./socialShare/SocialShare.astro";
     >{new Date().getFullYear()}&copy; Tous droits réservés</span
   >
   <SocialShare
-    title="MarvinL.com − Un profil de développeur qui devrait te plaire !"
+    title="MarvinL.com − Un profil de développeur freelance qui devrait te plaire !"
     description="Découvre MarvinL.com, développeur web fullstack en freelance depuis la Guadeloupe et plonge dans mon univers créatif. 💼💻"
   />
 </div>
