--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -11,11 +11,12 @@ import { persona } from "../../persona";
 const allBlogPosts = await getCollection("blog", ({ data }) => {
   return import.meta.env.PROD ? data.isDraft !== true : true;
 });
-const byDate = group(allBlogPosts, ({ data: { date } }) => {
-  const d = new Date(date).toLocaleString("fr-fr", {
+const byDate = group(allBlogPosts, ({ data:{createdAt}}) => {
+  const d = new Date(createdAt).toLocaleString("fr-fr", {
     month: "short",
     year: "numeric",
   });
+  
   return d;
 });
 ---
@@ -24,7 +25,7 @@ const byDate = group(allBlogPosts, ({ data: { date } }) => {
   <Section>
     <SectionTitle title="Articles" />
     {
-      Object.keys(byDate).map((d) => (
+      Object.keys(byDate).sort((a,b)=>new Date(b).getTime() - new Date(a).getTime()).map((d) => (
         <>
           <p class="w-fit p-1 font-bold capitalize dark:bg-d/secondary dark:text-d/primary">
             {d}
