--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -90,7 +90,7 @@ import BottomLine from "../components/BottomLine.astro";
       data-website-id="d75ac3a2-42e5-4aaf-8f37-371c1e2e4eac"></script>
     <script async src="https://tally.so/widgets/embed.js"></script>
   </head>
-  <body class="h-full w-full bg-l/bg p-4 antialiased md:p-0 dark:bg-d/bg">
+  <body class="h-full w-full bg-l/bg p-4 antialiased dark:bg-d/bg md:p-0">
     <div
       class="m-auto flex min-h-screen w-full max-w-3xl flex-col items-start justify-center gap-8"
     >
@@ -109,14 +109,14 @@ import BottomLine from "../components/BottomLine.astro";
       window._mtm = window._mtm || [];
       window._axcb.push(function (sdk) {
         sdk.on("cookies:complete", function (choices) {
-          let axeptio_Matomo = [];
+          let axeptio_Umami = [];
           for (let vendor in choices) {
             if (vendor != "$$completed" && choices[vendor] == true) {
               _mtm.push({ event: `axeptio_activate_${vendor}` });
-              axeptio_Matomo.push(vendor);
+              axeptio_Umami.push(vendor);
             }
           }
-          _mtm.push({ axeptio_Matomo: axeptio_Matomo });
+          _mtm.push({ axeptio_Matomo: axeptio_Umami });
         });
       });
       (function (d, s) {
