chore(ui): fix styles & content

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -93,12 +93,12 @@ import BottomLine from "../components/BottomLine.astro";
       data-website-id="d75ac3a2-42e5-4aaf-8f37-371c1e2e4eac"></script>
     <script async src="https://tally.so/widgets/embed.js"></script>
   </head>
-  <body class="h-full w-full bg-l/bg p-4 antialiased md:p-0 dark:bg-d/bg">
+  <body class="h-full w-full bg-l/bg p-4 antialiased dark:bg-d/bg md:p-0">
     <div
       class="m-auto flex min-h-screen w-full max-w-3xl flex-col items-start justify-center gap-8"
     >
       <Navigation />
-      <main class="w-full space-y-4">
+      <main class="w-full space-y-8">
         <slot />
       </main>
       <Footer />
