--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,7 +1,7 @@
 ---
 interface Props {
   url: string;
-  target: string;
+  target?: string;
   title?: string;
   noDecorate?: boolean;
   invert?: boolean;
