--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,8 +5,11 @@ import ListItem from "../../components/ListItem.astro";
 import SectionTitle from "../../components/SectionTitle.astro";
 import Section from "../../components/Section.astro";
 import { group } from "radash";
-import ContentLayout from "../../layouts/ContentLayout.astro";
 import { persona } from "../../persona";
+import Layout from "@/layouts/Layout.astro";
+import ContentFooter from "@/components/ContentFooter.astro";
+import { Fragment } from "react";
+import Footer from "@/components/Footer.astro";
 
 const allBlogPosts = await getCollection("blog", ({ data }) => {
   return import.meta.env.PROD ? data.isDraft !== true : true;
@@ -21,7 +24,7 @@ const byDate = group(allBlogPosts, ({ data:{createdAt}}) => {
 });
 ---
 
-<ContentLayout title="Le blog — MarvinL.com" desc={persona.seo.description}>
+<Layout title="Le blog — MarvinL.com" desc={persona.seo.description}>
   <Section>
     <SectionTitle title="Articles" />
     {
@@ -43,4 +46,5 @@ const byDate = group(allBlogPosts, ({ data:{createdAt}}) => {
       ))
     }
   </Section>
-</ContentLayout>
+  <Footer />
+</Layout>
