--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -1,19 +1,13 @@
 ---
-import Section from "../components/Section.astro";
 interface Props {
   title: string;
   desc: string;
 }
 
 const { title, desc } = Astro.props;
-import Navigation from "../components/Navigation.astro";
 import { ViewTransitions } from "astro:transitions";
-import ContentFooter from "../components/ContentFooter.astro";
-import BottomLine from "../components/BottomLine.astro";
 ---
 
-<!doctype html>
-<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
@@ -28,6 +22,7 @@ import BottomLine from "../components/BottomLine.astro";
       sizes="32x32"
       href="/favicon/favicon-32x32.png"
     />
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon/favicon.ico" />
     <link
       rel="icon"
       type="image/png"
@@ -43,10 +38,13 @@ import BottomLine from "../components/BottomLine.astro";
     <meta property="og:type" content="website" />
     <meta property="og:title" content={title} />
     <meta property="og:description" content={desc} />
+    <meta property="og:url" content={Astro.url} />
+    <meta property="og:site_name" content="MarvinL.com" />
 
     {/* Twitter */}
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:title" content={title} />
+    <meta property="twitter:site" content={Astro.url} />
     <meta property="twitter:description" content={desc} />
     <!--RSS-->
     <link
@@ -56,7 +54,7 @@ import BottomLine from "../components/BottomLine.astro";
       href={new URL("rss.xml", Astro.site)}
     />
     <title>{title}</title>
-
+    <ViewTransitions />
     <script is:inline type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -84,49 +82,11 @@ import BottomLine from "../components/BottomLine.astro";
         ]
       }
     </script>
-    <ViewTransitions />
     <script
-    is:inline
       defer
+      is:inline
       src="https://analytics.marvinl.com/script.js"
       data-website-id="d75ac3a2-42e5-4aaf-8f37-371c1e2e4eac"></script>
-    <script is:inline async src="https://tally.so/widgets/embed.js"></script>
+    <script async src="https://tally.so/widgets/embed.js"></script>
+    
   </head>
-  <body class="h-full w-full bg-l/bg p-4 antialiased dark:bg-d/bg md:p-0">
-    <div
-      class="m-auto flex min-h-screen w-full max-w-3xl flex-col items-start justify-center gap-8"
-    >
-      <Navigation />
-      <main class="mb-4 lg:mb-8 w-full">
-        <slot />
-      </main>
-      <BottomLine />
-    </div>
-    <script>
-      window.axeptioSettings = {
-        clientId: "65cb08d7c71bfd77d142e82d",
-      };
-      window._axcb = window._axcb || [];
-      window._mtm = window._mtm || [];
-      window._axcb.push(function (sdk) {
-        sdk.on("cookies:complete", function (choices) {
-          let axeptio_Umami = [];
-          for (let vendor in choices) {
-            if (vendor != "$$completed" && choices[vendor] == true) {
-              _mtm.push({ event: `axeptio_activate_${vendor}` });
-              axeptio_Umami.push(vendor);
-            }
-          }
-          _mtm.push({ axeptio_Matomo: axeptio_Umami });
-        });
-      });
-      (function (d, s) {
-        var t = d.getElementsByTagName(s)[0],
-          e = d.createElement(s);
-        e.async = true;
-        e.src = "//static.axept.io/sdk.js";
-        t.parentNode.insertBefore(e, t);
-      })(document, "script");
-    </script>
-  </body>
-</html>
