--- a/src/pages/projets/index.astro
+++ b/src/pages/projets/index.astro
@@ -4,7 +4,7 @@ import List from "../../components/List.astro";
 import ListItem from "../../components/ListItem.astro";
 import SectionTitle from "../../components/SectionTitle.astro";
 import Section from "../../components/Section.astro";
-import ContentLayout from "../../layouts/ContentLayout.astro";
+import Layout from "../../layouts/Layout.astro";
 import { persona } from "../../persona";
 import ContentFooter from "../../components/ContentFooter.astro";
 const clientProjects = await getCollection("project", ({ data }) => {
@@ -17,7 +17,7 @@ const myProjects = await getCollection("project", ({ data }) => {
 });
 ---
 
-<ContentLayout title="Mes projets − MarvinL.com" desc={persona.seo.projectDesc}>
+<Layout title="Mes projets − MarvinL.com" desc={persona.seo.projectDesc}>
   <Section>
     <SectionTitle title="Projets Clients" />
     <List>
@@ -49,4 +49,4 @@ const myProjects = await getCollection("project", ({ data }) => {
     </List>
   </Section>
   <ContentFooter isRoot />
-</ContentLayout>
+</Layout>
